--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </li>
             <li class="nav-item">
               <a href="#">
-              <b class=" nav-link" href="about.html">LOGIN</b>
+              <strong class=" nav-link" href="about.html">LOGIN</stron>
             </a>
             </li>
             <li class="nav-item">
@@ -102,7 +102,7 @@
      <p>Now you can get that same online safety at home too! Manage all your kids' devices by pairing the same free SecurlyHoime
      App wutg a gine Hub $5.99 month</p>
      <button class= "try">
-       <b>TRY NOW!</b>
+       <strong>TRY NOW!</strong>
     </button>
     </div>
     </div>
@@ -140,7 +140,7 @@
  <h2 class="maintain">Maintain and manager healthy screent time online.</h2>
  <p class="main">You cam pause internet, customiszed time <br> by device and set overall time limits. <br>Rest easy you know Securly is at work</p>
  <button class= "try">
-   <b>TRY NOW!</b>
+   <strong>TRY NOW!</strong>
 </button>
 </div>
 </div>
@@ -177,7 +177,7 @@
   content. Online safety doesn't get easier that Securly
   </p>
 <button class = "buy">
-  <b>BUY NOW</b>
+  <strong>BUY NOW</strong>
 </button>
 
 </div>
@@ -185,11 +185,11 @@
 </div>
 </section>
    <section class="connect">
-     <form class="form-inline">
-          <p class = "signup">Stay connected. Sign up to our educational emails</p>
+     <form class="form-inline" method="post">
+          <label class = "signup" for="Signup">Stay connected. Sign up to our educational emails</label>
        <div class="  input-group">
-            <input  ctype="text" class="form-control"/>
-            <button class =" signup-btn input-group-addon" type="submit">
+            <input  ctype="text" name = "signup" class="form-control"/>
+            <button class =" signup-btn input-group-addon"  type="submit">
                SIGNUP
             </button>
           </div>
@@ -228,12 +228,12 @@
             <div class=" center col-md-4">
               <img class = "home-image "src="img/home-image-cropped-img-2.png" alt="Home image"></div>
             <div class=" trials col-md-4">
-              <h2 class = head>30 Day Free-Trial</h2>
+              <h3 class = head>30 Day Free-Trial</h3>
               <h4>$5.99/month after</h4>
               <p>(no contract or commitment)</p>
             
             <button class = "buy">
-                <b>BUY NOW</b>
+                <strong>BUY NOW</strong>
               </button>
               <br>
               <a href="#">
@@ -267,7 +267,7 @@
      <div class = "container-fluid">
        <div class = "row">
 <div class ="email col-md-3">
-      <i class="fas fa-envelope"> Support </i>
+      <em class="fas fa-envelope"> Support </em>
        <ul id="email">
           <li>  support@securly.com</li>
         <li>
@@ -275,7 +275,7 @@
       </ul>
       </div>
       <div class = "left col-md-2">
-      <i class=" fas fa-mobile-alt"> Sales </i>
+      <em class=" fas fa-mobile-alt"> Sales </em>
         <p id = "call">
         1-855-SECURLY
       </p>
@@ -283,10 +283,10 @@
 <div class = col-md-3></div>
     <div class = col-md-3>
   <ul class = "media">
-    <li class = "social"><i class="fab fa-facebook-f"></i></li>
-    <li class = "social"><i class="fab fa-twitter"></i></li>
-    <li class = "social"><i class="fab fa-instagram"></i></li>
-    <li class = "social"><i class="fab fa-youtube"></i></li>
+    <li class = "social"><em class="fab fa-facebook-f"></em></li>
+    <li class = "social"><em class="fab fa-twitter"></em></li>
+    <li class = "social"><em class="fab fa-instagram"></em></li>
+    <li class = "social"><em class="fab fa-youtube"></em></li>
   </ul>
   <ul>
       <li class = "location">@ Copyright Securly Inc, 2016</li>
