--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <div class ="container">
       <div class="row ">
           <div class=" col-md-8">
-              <h2>Kids, here's your fredom <br> Parents, here's your <br> peace of mind.</h2>
+              <h2 class = "freedom">Kids, here's your fredom <br> Parents, here's your <br> peace of mind.</h2>
          <p class = "kids-device">Kids want to use their devices to browse <br> YouTube, search and explore. Parents just <br> want to keep
            kids safe. Securly provides safe <br>internet access by filtering outcontent that's <br> not meant for kids.
            It's the easy way to give <br> everyone what they want.
@@ -125,8 +125,8 @@
         <img class = "mobile-header" src="img/Android.png" alt="Google download">
       </a>  
        </div>
-       <div class=" col-md-4"></div>
-       <img class ="home-secure" src="img/Securly-home-device.png" alt="Mobile 360 view">
+       <div class=" col-md-6"> </div>
+       <img class ="home-secure" src="img/Securly-home-device.png" alt="Mobile 360 view"> 
 </section>
 <section>
     <div  style="background-image: url(img/Mom+Daughter.png); background-repeat: no-repeat; background-size:cover; ">
